--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_fonts: ^6.2.1
   firebase_core: ^3.8.0
+  firebase_auth: ^5.3.3
+  provider: ^6.1.2
+  cloud_firestore: ^5.6.2
 
 dev_dependencies:
   flutter_test:
